--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Title</title>
+    <title>Django Example</title>
 </head>
 <body>
     <h1>Hello World! </h1>
+    <p>
+     ここでは、Django でアプリを構築を行った際の様子をここに実装しました
+    </p>
 </body>
 </html>
